<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--  General Settings Group  -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_general_settings" android:icon="@drawable/settings_minimalistic_svgrepo_com_1_" android:title="@string/general"/>
    </group>
    <!--  Playback and Audio Settings Group  -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_audio_settings" android:title="@string/audio" android:icon="@drawable/music_note_4_svgrepo_com"/>
        <item android:id="@+id/nav_notification_settings" android:title="@string/notifications_and_alerts" android:icon="@drawable/bell_svgrepo_com_1_"/>
        <item android:id="@+id/nav_library_settings" android:title="@string/library" android:icon="@drawable/library_svgrepo_com"/>
    </group>
    <!--  Account and Preferences Group  -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_account_settings" android:title="@string/account" android:icon="@drawable/user_id_svgrepo_com"/>
        <item android:id="@+id/nav_appearance_settings" android:title="@string/appearance" android:icon="@drawable/gallery_circle_svgrepo_com"/>
        <item android:id="@+id/nav_content_preferences_settings" android:title="@string/content_preferences" android:icon="@drawable/xxx_svgrepo_com_1_"/>
    </group>
    <!--  Storage and Data Group  -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_storage_n_data_settings" android:title="@string/storage_and_data" android:icon="@drawable/database_svgrepo_com_1_"/>
    </group>
    <!--  Login-Logout Group  -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_logout_settings" android:title="@string/logout" android:icon="@drawable/logout_2_svgrepo_com"/>
    </group>
</menu>