<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp" android:layout_gravity="center" android:scrollbars="vertical">
    <!--  Back Button  -->
    <Button android:id="@+id/back_button_libr" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/back" android:textAppearance="@style/regular_font_18" app:icon="@drawable/alt_arrow_left_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
    <!--  Recently Added  -->
    <TextView android:id="@+id/recently_added_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/recently_added" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/recently_added_switch" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/show_recently_added" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" android:layout_marginBottom="16dp" tools:ignore="UseSwitchCompatOrMaterialXml"/>
    <!--  Custom Sorting Options  -->
    <TextView android:id="@+id/custom_sorting_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/custom_sorting" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Spinner android:id="@+id/sorting_options_spinner" android:layout_width="match_parent" android:layout_height="48dp" android:entries="@array/sorting_options" android:popupBackground="@color/material_dynamic_neutral20" android:textAppearance="@style/regular_font_16" android:layout_marginBottom="16dp"/>
    <!--  Duplicate Song Detection  -->
    <TextView android:id="@+id/duplicate_song_detection_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/duplicate_song_detection" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/duplicate_song_detection_switch" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/enable_duplicate_detection" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" android:layout_marginBottom="16dp" tools:ignore="UseSwitchCompatOrMaterialXml"/>
    <!--  Favorite Songs  -->
    <TextView android:id="@+id/favorite_songs_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/favorite_songs" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/favorite_songs_switch" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/highlight_favorites" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" android:layout_marginBottom="16dp" tools:ignore="UseSwitchCompatOrMaterialXml"/>
    <!--  Recently Played History  -->
    <TextView android:id="@+id/recently_played_history_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/recently_played_history" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/recently_played_history_switch" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/enable_recently_played" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" android:layout_marginBottom="16dp" tools:ignore="UseSwitchCompatOrMaterialXml"/>
</LinearLayout>