<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp" android:layout_gravity="center" android:scrollbars="vertical">
    <!--  Back Button  -->
    <Button android:id="@+id/back_button_account" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/back" android:textAppearance="@style/regular_font_18" app:icon="@drawable/alt_arrow_left_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
    <!--  Profile Information  -->
    <TextView android:id="@+id/profile_info_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/profile_information" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <!--  Account Name  -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="8dp">
        <TextView android:id="@+id/account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8dp" android:text="@string/account_name" android:textAppearance="@style/regular_font_16" android:textColor="@color/white"/>
        <TextView android:id="@+id/edit_account_name" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:backgroundTint="@color/material_dynamic_secondary40" android:hint="@string/enter_name" android:textAppearance="@style/regular_font_16"/>
    </LinearLayout>
    <!--  Account Email  -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="16dp">
        <TextView android:id="@+id/account_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8dp" android:text="@string/account_email" android:textAppearance="@style/regular_font_16" android:textColor="@color/white"/>
        <TextView android:id="@+id/edit_account_email" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:backgroundTint="@color/material_dynamic_secondary40" android:hint="@string/enter_email" android:inputType="textEmailAddress" android:textAppearance="@style/regular_font_16"/>
    </LinearLayout>
    <!--  Privacy Settings  -->
    <TextView android:id="@+id/privacy_settings_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/privacy_settings" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/share_listening_activity_switch" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/share_listening_activity" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" tools:ignore="UseSwitchCompatOrMaterialXml" android:layout_marginBottom="16dp"/>
    <!--  Subscription Information  -->
</LinearLayout>