<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="center" android:orientation="vertical" android:padding="16dp" android:scrollbars="vertical">
    <!--  Back Button  -->
    <Button android:id="@+id/back_button_general" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/back" android:textAppearance="@style/regular_font_18" app:icon="@drawable/alt_arrow_left_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
    <TextView android:id="@+id/language_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/language" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Button android:id="@+id/language_selector_button" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginBottom="16dp" android:background="@drawable/rounded_button" android:drawablePadding="8dp" android:gravity="center_vertical|start" android:paddingStart="16dp" android:text="@string/select_language" android:textAppearance="@style/regular_font_16" app:icon="@drawable/global_svgrepo_com" app:iconSize="30dp" tools:ignore="RtlSymmetry"/>
    <!--  Crossfade Songs  -->
    <TextView android:id="@+id/crossfade_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/crossfade_songs" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <SeekBar android:id="@+id/crossfade_seekbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:max="12" android:progress="0" android:progressTint="@android:color/black" android:thumbTint="@android:color/black"/>
    <TextView android:id="@+id/crossfade_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/seconds_format" android:textAppearance="@style/regular_font_14" android:textSize="16sp"/>
    <!--  Mono Audio Switch  -->
    <TextView android:id="@+id/mono_audio_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/mono_audio" android:textAppearance="@style/ultrabold_font_16" android:textColor="@color/light_pink"/>
    <Switch android:id="@+id/mono_audio_switch" android:layout_width="48dp" android:layout_height="48dp" android:layout_marginBottom="16dp" android:thumbTint="@color/deep_pink" android:trackTint="@color/switch_track_tint" tools:ignore="UseSwitchCompatOrMaterialXml"/>
    <!--  Help Button  -->
    <!--  Reset Settings Button  -->
    <Button android:id="@+id/reset_settings_button" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/reset_settings" android:textAppearance="@style/regular_font_18" app:icon="@drawable/undo_left_round_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
    <Button android:id="@+id/help_button" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/help" android:textAppearance="@style/regular_font_18" app:icon="@drawable/book_2_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
</LinearLayout>