<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp" android:layout_gravity="center" android:scrollbars="vertical">
    <!--  Back Button  -->
    <Button android:id="@+id/back_button_logout" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/back" android:textAppearance="@style/regular_font_18" app:icon="@drawable/alt_arrow_left_svgrepo_com" app:iconGravity="textStart" app:iconSize="30dp"/>
    <!--  Logout Confirmation Text  -->
    <TextView android:id="@+id/logout_confirmation_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="16dp" android:text="@string/logout_confirmation" android:textAppearance="@style/ultrabold_font_20" android:textColor="@color/light_pink"/>
    <!--  Logout Button  -->
    <Button android:id="@+id/logout_button" android:layout_width="match_parent" android:layout_height="100dp" android:layout_gravity="start|top" android:layout_margin="16dp" android:layoutDirection="inherit" android:text="@string/logout" android:textAppearance="@style/regular_font_18" app:icon="@drawable/logout_3_svgrepo_com" app:iconGravity="textStart" app:iconSize="40dp"/>
    <ImageView android:id="@+id/imageView2" android:layout_width="match_parent" android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"/>
    <TextView android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/log_back_in_msg" android:textAppearance="@style/regular_font_14"/>
</LinearLayout>