<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContentPreferencesFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/back_button_content_pr"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="start|top"
        android:layout_margin="16dp"
        android:layoutDirection="inherit"
        android:text="@string/back"
        android:textAppearance="@style/regular_font_18"
        app:icon="@drawable/alt_arrow_left_svgrepo_com"
        app:iconGravity="textStart"
        app:iconSize="30dp" />


    <TextView
        android:id="@+id/explicit_content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/explicit_content_filter"
        android:textAppearance="@style/ultrabold_font_16"
        android:textColor="@color/light_pink" />

    <Switch
        android:id="@+id/explicit_content_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/allow_explicit_content"
        android:thumbTint="@color/deep_pink"
        android:trackTint="@color/switch_track_tint"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>